# dmerge-dynlib-wrappers

./: .gitignore  .gitmodules  README.md
demo-malloc/: makefile
jemalloc-wrapper/: CMakeLists.txt  README.md  deps.cmake  main.cc  malloc.cc  web_service.py  zalloc.cc
jemalloc-wrapper/include/: allocator.hh
malloc/: main.c  mymalloc.c
